# DNN

./: Makefile  README.md  data.py  dnn.py  test.csv  train.csv
core/: .gitignore  CMakeLists.txt  Makefile  dnn.py  main.c
core/src/: main.cpp
core/utils/: layer.cpp  layer.h  matrix.cpp  matrix.h  sequential.cpp  sequential.h  shm_writer.cpp  shm_writer.h
core/utils/Data/: data.cpp  data.h
core/utils/Loss/: mse.cpp  mse.h
core/utils/MSE/: mse.h
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/api/: data.js  data.ts
frontend/src/components/: DNNVisualizer.tsx  DNNVisualizer2D.tsx  SettingsPanel.tsx  StatsPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: snapshot.ts
services/: go.mod
services/reader/: shm_reader.go  tmp.txt  types.go
services/websocket/: go.mod  load_env.go  main.go  utils.go
